# Kimi-code-Plugin-CC

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LIVE_TEST.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.kimi-code/: AGENTS.md  PROJECT.md
agents/: bridge-orchestrator.md  review-adversary.md
commands/: kimi-code-review.md  kimi-opinion.md  kimi-review.md  kimi-run.md
docs/: plan-v0.5.md
docs/decisions/: 001-session-model.md  002-approval-policy.md  003-recursion-guard.md  004-async-execution-path.md  005-thread-backed-subprocess-runner.md
skills/bridge/: SKILL.md
skills/code-review/: SKILL.md
skills/contract-audit/: SKILL.md
skills/fail-safe-audit/: SKILL.md
skills/planning-loop/: SKILL.md
skills/review-loop/: SKILL.md
skills/santa-loop/: SKILL.md
skills/seam-design-review/: SKILL.md
skills/second-opinion/: SKILL.md
skills/team-design-review/: SKILL.md
skills/test-gap-audit/: SKILL.md
src/kimi_code_plugin_cc/: __init__.py  cli.py  mcp_server.py
src/kimi_code_plugin_cc/agent_registry/: __init__.py  base.py  codex.py  kimi.py
src/kimi_code_plugin_cc/bridge/: __init__.py  acp_adapter.py  parser.py  runner.py  session.py
src/kimi_code_plugin_cc/loops/: __init__.py  planning.py  review.py  santa.py
tests/: conftest.py  test_agent_registry.py  test_bridge.py  test_cli_contract.py  test_contract_drift.py  test_loops.py  test_mcp_server.py  test_protocol.py  test_security.py  test_streaming_runner.py  test_windows_runner.py
tests/live/: test_multiline_transport.py
(+4 files in other folders)
